# edac-utils

./: 884477.patch  Makefile  README.md  add-more-labels-to-sync-with-rhel5.patch  edac-ctl-add-delay-status-and-improve-motherboard-id.patch  edac-ctl-man-missing-options.patch  edac-util.1-Fix-a-few-mistakes-at-the-spec.patch  edac-utils.spec  edac_ctl_improve_parser.patch  edac_init-fix_status_return_value.patch  edac_init-only_return_defined_error_codes.patch  edac_utils-do_not_exit_if_dmidecode_isnt_found.patch  edac_utils-dont_try_to_use_dmidecode_if_not_installed.patch  labels.db-Add-new-labels-from-edac-utils-0.16.patch  libedac-Returns-an-error-if-get_sysfs_uint_attr-fail.patch  libedac-allow-handling-up-to-6-channels-instead-of-2.patch  no_strict_aliasing.patch
src/: META  bootstrap  configure.ac  edac-utils.spec
src/config/: x_ac_debug.m4  x_ac_libsysfs.m4
src/src/: Makefile.am
src/src/etc/: Makefile.am  edac.init  labels.db
src/src/lib/: Makefile.am  edac.3.in  edac.h  libedac.c
src/src/util/: Makefile.am  edac-ctl  edac-ctl.8.in  edac-util.1.in  edac-util.c  list.c  list.h  split.c  split.h
